fixed footer alignment on profile page

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -3,12 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 1300px;
+  height: 1150px;
   font-family: 'Source Serif Pro', serif;
   background-image: url('./kisspng-iced-coffee-espresso-coffee-bean-coffee-beans-png-transparent-images-5ac5fa92107079.1267301315229241780673.png');
   background-position: bottom;
   background-size:contain;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 .landing-page h1{
@@ -26,19 +27,4 @@
   font-size: 1.75em;
   width: fit-content;
   padding: 1rem 0 2rem 0;
-}
-
-.landing-page button {
-  border: none;
-  background-color: transparent;
-  margin-top: 2rem;
-  padding: 1.5rem 2.75rem;
-  font-weight: 600;
-  font-size: 2em;
-  color: #281b46;
-  cursor: pointer;
-}
-
-.landing-page button:hover {
-
 }
