--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -42,8 +42,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-content: flex-start;
   width: 1350px;
   margin: 3em auto 5em auto;
+  min-height: 600px;
 
 }
 .recent-activity h3 {
@@ -52,7 +54,6 @@
   flex-basis: 100%;
   height: 28px;
   font-size: 16px;
-
 }
 
 .recent-activity h4 {
